# DSTtest

./: .gitignore
HydraCore3/: CMakeLists.txt  Makefile  cmake_install.cmake  imageutils.cpp  integrator_pt.h  integrator_pt1.cpp  integrator_pt1_generated.cpp  integrator_pt1_generated.h  integrator_pt1_temp.cpp  integrator_pt2.cpp  main.cpp
HydraCore3-main/: CMakeLists.txt  Makefile  cmake_install.cmake  hydra  integrator_pt.h  integrator_pt1.cpp  integrator_pt2.cpp  integrator_pt_scene.cpp  main.cpp
HydraCore3-main/addsrc/AddHeaders/: simpleTypes.h
HydraCore3-main/addsrc/DSTree/: dst.h  dstree.cpp  dstree.h
HydraCore3/addsrc/AddHeaders/: CrossRT.h
HydraCore3/addsrc/DSTree/: DSTree.cpp  DSTree.h  dst.h  dstree.cpp  dstree.h
HydraCore3/addsrc/Vis/: vis.cpp  vis.h
HydraCore3/addsrc/Vis/shaders/: treeFrag.glsl  treeVert.glsl  triVert.glsl
HydraCore3/ext/: common.h
HydraCore3/ext/GLAD/include/glad/: glad.h
HydraCore3/ext/GLAD/src/: glad.c
HydraCore3/ext/imgui/backends/: imgui_impl_glfw.cpp
HydraCore3/include/: Integrator_ubo.h
HydraCore3/shaders/: treeFrag.glsl  treeGeom.glsl  treeVert.glsl  triFrag.glsl
HydraCore3/shaders_generated/: CastSingleRayMega.comp  CastSingleRayMega.comp.spv  NaivePathTraceMega.comp  NaivePathTraceMega.comp.spv  PackXYMega.comp  PathTraceMega.comp  PathTraceMega.comp.spv  build.sh  common_generated.h
HydraCore3_Embree/: Makefile  cmake_install.cmake  integrator_pt.h  integrator_pt1.cpp  integrator_pt1_generated.cpp  integrator_pt1_generated.h  integrator_pt1_generated_ds.cpp  integrator_pt1_generated_init.cpp  integrator_pt1_temp.cpp  integrator_pt2.cpp  integrator_pt_scene.cpp
HydraCore3_Embree/addsrc/AddHeaders/: LiteMath.h
HydraCore3_Embree/addsrc/DSTree/: dstree.cpp  dstree.h
HydraCore3_Embree/shaders_generated/: CastSingleRayMega.comp  CastSingleRayMega.comp.spv  NaivePathTraceMega.comp  NaivePathTraceMega.comp.spv  PackXYMega.comp  PackXYMega.comp.spv  PathTraceMega.comp  PathTraceMega.comp.spv  common_generated.h
RayTracing/: CrossRT.h  VulkanRTX.cpp  VulkanRTX.h
geo_utils/: cmesh.h
resources/HydraCore/hydra_app/tests/02_cry_sponza/: change_00000.xml
resources/HydraCore/hydra_app/tests/test_42/: change_00000.xml  statex_00000.xml  statex_00001.xml
vkutils/: vk_context.cpp  vk_include.h
vkutils/ray_tracing/: vk_rt_funcs.h  vk_rt_utils.cpp  vk_rt_utils.h
volk/: CMakeCache.txt  Makefile  cmake_install.cmake
(+293 files in other folders)
